Tweaked track_plt.sh and added moments.cc.

--- a/projects/src/ptc/Makefile.am
+++ b/projects/src/ptc/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = fmap get_dnu vlad tracy_2_3 carbon_map drv_terms get_nl_optics \
-               opt_des_1_ptc opt_des_2_ptc poincare_map
+               opt_des_1_ptc opt_des_2_ptc poincare_map moments
 
 fmap_SOURCES          = fmap.cc
 get_dnu_SOURCES       = get_dnu.cc
@@ -11,6 +11,7 @@ get_nl_optics_SOURCES = get_nl_optics.cc
 opt_des_1_ptc_SOURCES = opt_des_1_ptc.cc
 opt_des_2_ptc_SOURCES = opt_des_2_ptc.cc
 poincare_map_SOURCES  = poincare_map.cc
+moments_SOURCES       = moments.cc
 
 GSL_INCLUDE = /usr/local/Cellar/gsl/2.7.1
 # GSL_INCLUDE = /net/home/lli/OPAL/OPAL-2.0.1
@@ -22,6 +23,7 @@ LIBS        = -L$(TRACY_LIB)/tracy/lib \
               -lstdc++ \
               -lm \
               -L$(GSL_INCLUDE)/lib -lgsl -lgslcblas \
+              -L/usr/local/Cellar/gcc/12.2.0/lib/gcc/12 \
               -lgfortran
 
 AM_CPPFLAGS = -I/opt/OPAL-2.2.1/lib \
