Prototyping of wakefields ../projects/src/pts/moments.cc.

--- a/projects/src/ptc/Makefile.am
+++ b/projects/src/ptc/Makefile.am
@@ -1,5 +1,6 @@
 bin_PROGRAMS = fmap get_dnu vlad tracy_2_3 carbon_map drv_terms get_nl_optics \
-               opt_des_1_ptc opt_des_2_ptc poincare_map moments wakefield
+               opt_des_1_ptc opt_des_2_ptc poincare_map wakefield lielib \
+               map_norm_jb stat_mom moments
 
 fmap_SOURCES          = fmap.cc
 get_dnu_SOURCES       = get_dnu.cc
@@ -11,8 +12,11 @@ get_nl_optics_SOURCES = get_nl_optics.cc
 opt_des_1_ptc_SOURCES = opt_des_1_ptc.cc
 opt_des_2_ptc_SOURCES = opt_des_2_ptc.cc
 poincare_map_SOURCES  = poincare_map.cc
-moments_SOURCES       = moments.cc
 wakefield_SOURCES     = wakefield.cc
+lielib_SOURCES        = lielib.cc
+map_norm_jb_SOURCES   = map_norm_jb.cc
+stat_mom_SOURCES      = stat_mom.cc
+moments_SOURCES       = moments.cc
 
 GSL_INCLUDE = /usr/local/Cellar/gsl/2.7.1
 # GSL_INCLUDE = /net/home/lli/OPAL/OPAL-2.0.1
@@ -29,7 +33,8 @@ LIBS        = -L$(TRACY_LIB)/tracy/lib \
 
 AM_CPPFLAGS = -I/opt/OPAL-2.2.1/lib \
               -I$(TRACY_LIB)/tracy/inc -I$(NUM_REC)/inc \
-              -I$(GSL_INCLUDE)/include
+              -I$(GSL_INCLUDE)/include \
+              -std=c++11
 
 AM_FFLAGS   = -g -O0 -Wall -fbounds-check
 
