--- a/projects/src/ptc/Makefile.am
+++ b/projects/src/ptc/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = fmap get_dnu vlad tracy_2_3 carbon_map drv_terms get_nl_optics \
                opt_des_1_ptc opt_des_2_ptc poincare_map wakefield lielib \
-               map_norm_jb stat_mom moments
+               map_norm_jb stat_mom moments tune_conf
 
 fmap_SOURCES          = fmap.cc
 get_dnu_SOURCES       = get_dnu.cc
@@ -17,6 +17,7 @@ lielib_SOURCES        = lielib.cc
 map_norm_jb_SOURCES   = map_norm_jb.cc
 stat_mom_SOURCES      = stat_mom.cc
 moments_SOURCES       = moments.cc
+tune_conf_SOURCES     = tune_conf.cc
 
 GSL_INCLUDE = /usr/local/Cellar/gsl/2.7.1
 # GSL_INCLUDE = /net/home/lli/OPAL/OPAL-2.0.1
