Included use case map_norm.

--- a/projects/src/ptc/Makefile.am
+++ b/projects/src/ptc/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = fmap get_dnu vlad tracy_2_3 carbon_map drv_terms get_nl_optics \
-               opt_des_1_ptc opt_des_2_ptc poincare_map wakefield \
+               opt_des_1_ptc opt_des_2_ptc poincare_map wakefield map_norm \
                lielib map_norm_jb stat_mom moments tune_conf bessy_ii max_4u \
                max_4u_scan_dnu
 
@@ -14,7 +14,7 @@ opt_des_1_ptc_SOURCES   = opt_des_1_ptc.cc
 opt_des_2_ptc_SOURCES   = opt_des_2_ptc.cc
 poincare_map_SOURCES    = poincare_map.cc
 wakefield_SOURCES       = wakefield.cc
-#map_norm_SOURCES        = map_norm.cc
+map_norm_SOURCES        = map_norm.cc
 lielib_SOURCES          = lielib.cc
 map_norm_jb_SOURCES     = map_norm_jb.cc
 stat_mom_SOURCES        = stat_mom.cc
